# EhMaster

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
frontend/: index.html
frontend/css/: context-menu.css  gallery-view.css  main.css  sidebar.css  virtual-grid.css
frontend/js/: api.js  app.js  context-menu.js  folder-tree.js  gallery-view.js  search.js  utils.js  virtual-grid.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  fetcher.rs  lib.rs  main.rs  models.rs  scanner.rs  state.rs  thumbnail.rs  watcher.rs
