[package]
name = "manga-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "manga_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "manga-viewer"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
