[package]
name = "eh-master"
version = "1.0.2"
edition = "2021"

[lib]
name = "eh_master_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "EhMaster"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
rayon = "1.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["cookies"] }
scraper = "0.22"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Storage",
    "Storage_Search",
    "Storage_Streams",
    "System",
    "Foundation",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
